--- a/pom.xml
+++ b/pom.xml
@@ -52,7 +52,17 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-security</artifactId>
 		</dependency>
-
+                
+                <dependency>
+                    <groupId>org.thymeleaf.extras</groupId>
+                    <artifactId>thymeleaf-extras-springsecurity5</artifactId>
+                        <version>3.0.5.RELEASE</version>
+                </dependency>
+	 <dependency>
+	  <groupId>org.thymeleaf</groupId>
+	  <artifactId>thymeleaf</artifactId>
+	  <version>3.1.2.RELEASE</version>
+	 </dependency>
 	</dependencies>
 
 	<build>
