--- a/pom.xml
+++ b/pom.xml
@@ -55,15 +55,17 @@
                 
                 <dependency>
                     <groupId>org.thymeleaf.extras</groupId>
-                    <artifactId>thymeleaf-extras-springsecurity5</artifactId>
-                        <version>3.0.5.RELEASE</version>
+                    <artifactId>thymeleaf-extras-springsecurity5</artifactId> 
+                    <version>3.1.2.RELEASE</version>                       
                 </dependency>
-	 <dependency>
-	  <groupId>org.thymeleaf</groupId>
-	  <artifactId>thymeleaf</artifactId>
-	  <version>3.1.2.RELEASE</version>
-	 </dependency>
-	</dependencies>
+                
+                <dependency>
+                    <groupId>org.apache.tomcat.embed</groupId>
+                    <artifactId>tomcat-embed-core</artifactId>
+                    <version>10.1.15</version>
+             <type>jar</type>
+                 </dependency>
+        </dependencies>
 
 	<build>
 		<plugins>
