--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>3.0.12</version>
+		<version>3.1.5</version>
 		<relativePath/>
 		<!-- lookup parent from repository -->
 	</parent>
@@ -19,7 +19,7 @@
 	</properties>
 	<dependencies>
 
-		
+
 
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
@@ -49,21 +49,23 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-security</artifactId>
 		</dependency>
-                
-                <dependency>
-                    <groupId>org.thymeleaf.extras</groupId>
-                    <artifactId>thymeleaf-extras-springsecurity5</artifactId> 
-                    <version>3.1.2.RELEASE</version>                       
-                </dependency>
-                           
-                <dependency>
-                    <groupId>org.apache.tomcat.embed</groupId>
-                    <artifactId>tomcat-embed-core</artifactId>
-                    <version>10.1.15</version>
-             <type>jar</type>
-                 </dependency>
-                  
-        </dependencies>
+		<dependency>
+			<groupId>org.thymeleaf.extras</groupId>
+			<artifactId>thymeleaf-extras-springsecurity6</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.glassfish.jaxb</groupId>
+			<artifactId>jaxb-runtime</artifactId>
+			<scope>provided</scope>
+		</dependency>
+
+		<dependency>
+			<groupId>org.apache.tomcat.embed</groupId>
+			<artifactId>tomcat-embed-core</artifactId>
+			<type>jar</type>
+		</dependency>
+
+	</dependencies>
 
 	<build>
 		<plugins>
